<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout
    android:id="@+id/add_property_view_nearby_gridlayout_nearby"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:columnCount="3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_school"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:text="@string/school"
        app:layout_row="0"
        app:layout_column="0"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_playground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:text="@string/playgroud"
        app:layout_row="0"
        app:layout_column="1"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_shop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:text="@string/shop"
        app:layout_row="0"
        app:layout_column="2"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_buses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:text="@string/buses"
        app:layout_row="1"
        app:layout_column="0"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_subway"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:text="@string/subway"
        app:layout_row="1"
        app:layout_column="1"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_nearby_park"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_columnWeight="1"
        android:text="@string/park"
        app:layout_row="1"
        app:layout_column="2"/>
</androidx.gridlayout.widget.GridLayout>