<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_marginEnd="@dimen/margin_small"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addProperty.AddPropertyView">

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/add_property_view_type_inputlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_dropdown_menu"
        android:layout_marginBottom="@dimen/margin_small">

        <AutoCompleteTextView
            android:id="@+id/add_property_view_dropdown_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.gridlayout.widget.GridLayout
        app:layout_constraintTop_toBottomOf="@id/add_property_view_type_inputlayout"
        android:id="@+id/add_property_view_price_surface_gridlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        android:layout_marginBottom="@dimen/margin_small">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_property_view_price_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/price_dollar"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_columnWeight="1"
            android:layout_marginEnd="@dimen/margin_small">

            <EditText
                android:id="@+id/add_property_view_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_property_view_surface_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/surface_m2"
            app:layout_column="1"
            app:layout_row="0"
            app:layout_columnWeight="1">

            <EditText
                android:id="@+id/add_property_view_surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        app:layout_constraintTop_toBottomOf="@id/add_property_view_price_surface_gridlayout"
        android:id="@+id/add_property_view_rooms_gridlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="3"
        android:layout_marginBottom="@dimen/margin_small">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_property_view_room_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/rooms"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_columnWeight="1"
            android:layout_marginEnd="@dimen/margin_small">

            <EditText
                android:id="@+id/add_property_view_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_property_view_bedroom_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/bedrooms"
            app:layout_column="1"
            app:layout_row="0"
            app:layout_columnWeight="1">

            <EditText
                android:id="@+id/add_property_view_bedroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_marginEnd="@dimen/margin_small"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_property_view_bathroom_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/bathrooms"
            app:layout_column="2"
            app:layout_row="0"
            app:layout_columnWeight="1">

            <EditText
                android:id="@+id/add_property_view_bathroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_marginEnd="@dimen/margin_small"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.gridlayout.widget.GridLayout>



    <TextView
        android:id="@+id/add_property_view_nearby_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_property_view_rooms_gridlayout"
        android:text="@string/near_by"
        android:textSize="@dimen/text_title"
        android:layout_marginTop="@dimen/margin_small"/>

    <include
        layout="@layout/amenities_checkboxes"
        android:id="@+id/add_property_view_nearby_gridlayout_nearby"
        app:layout_constraintTop_toBottomOf="@id/add_property_view_nearby_textview"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_property_view_description_inputlayout"
        app:layout_constraintTop_toBottomOf="@id/add_property_view_nearby_gridlayout_nearby"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:hint="@string/description"
        android:layout_marginBottom="@dimen/margin_small">

        <EditText
            android:id="@+id/add_property_view_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_property_view_address_inputlayout"
        app:layout_constraintTop_toBottomOf="@id/add_property_view_description_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_marginBottom="@dimen/margin_small">

        <EditText
            android:id="@+id/add_property_view_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_property_view_neighbourhood_inputlayout"
        app:layout_constraintTop_toBottomOf="@id/add_property_view_address_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/neighbourhood"
        android:layout_marginBottom="@dimen/margin_small">

        <EditText
            android:id="@+id/add_property_view_neighbourhood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_property_view_since_inputlayout"
        app:layout_constraintTop_toBottomOf="@id/add_property_view_neighbourhood_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/on_market_since"
        android:layout_marginBottom="@dimen/margin_small">
        <EditText
            android:id="@+id/add_property_view_since"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"/>
    </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/add_property_view_sold_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_property_view_since_inputlayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin_small"/>
        <TextView
            android:id="@+id/add_property_view_sold_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sold"
            app:layout_constraintTop_toTopOf="@id/add_property_view_sold_switch"
            app:layout_constraintBottom_toBottomOf="@id/add_property_view_sold_switch"
            app:layout_constraintStart_toEndOf="@id/add_property_view_sold_switch"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_big"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_property_view_soldon_inputlayout"
            app:layout_constraintTop_toBottomOf="@id/add_property_view_neighbourhood_inputlayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sold_on"
            android:visibility="invisible"
            android:layout_marginStart="@dimen/margin_big"
            app:layout_constraintStart_toEndOf="@id/add_property_view_sold_text"
            app:layout_constraintTop_toTopOf="@id/add_property_view_sold_switch"
            app:layout_constraintBottom_toBottomOf="@id/add_property_view_sold_switch"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/add_property_view_sold_on"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:visibility="invisible"/>
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_property_view_dropdown_agent_inputlayout"
        app:layout_constraintTop_toBottomOf="@id/add_property_view_sold_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/manage_by"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:focusable="false">

        <EditText
            android:id="@+id/add_property_view_dropdown_agent"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/add_property_view_add_picture_button"
        app:layout_constraintTop_toBottomOf="@id/add_property_view_dropdown_agent_inputlayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_property_view_picture_rv"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_width="@dimen/small_picture"
        android:layout_height="@dimen/small_picture"
        android:background="@drawable/add_circle_icon"/>

    <TextView
        android:id="@+id/add_property_view_add_picture_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_pictures"
        android:textSize="@dimen/text_title"
        app:layout_constraintTop_toTopOf="@id/add_property_view_add_picture_button"
        app:layout_constraintStart_toEndOf="@id/add_property_view_add_picture_button"
        app:layout_constraintBottom_toBottomOf="@id/add_property_view_add_picture_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/add_property_view_picture_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_property_view_add_picture_text" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>